test/constructor/extra_arguments.lox
struct Foo {
  fn init(a, b) {
    self.a = a
    self.b = b
  }
}

var foo = Foo(1, 2, 3, 4) // error: expected 2 arguments but got 4